feat: Convert to fullstack monorepo with React frontend
- Reorganized project structure to monorepo (server/ and client/)
- Added React frontend application with proxy to backend API
- Backend moved to server/ folder, now runs on port 3001
- Frontend runs on port 3000 with proxy to backend
- Added concurrently to run both applications simultaneously
- Updated package.json with fullstack scripts (start, server, client)
- Maintained all backend CRUD functionality and SQL Server connection
- Ready for frontend development with working API integration

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "lebo_backend",
+  "name": "lebo-fullstack",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "LEBO Backend & Frontend Fullstack Application",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && npm run dev",
+    "client": "cd client && npm start",
+    "build": "cd client && npm run build",
+    "test": "cd client && npm test",
+    "install-server": "cd server && npm install",
+    "install-client": "cd client && npm install",
+    "install-all": "npm run install-server && npm run install-client"
   },
-  "keywords": [],
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "keywords": [
+    "react",
+    "express",
+    "mssql",
+    "fullstack"
+  ],
   "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
-    "mssql": "^11.0.1",
-    "nodemon": "^3.1.10"
-  }
+  "license": "ISC"
 }
