--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,38 @@ node_modules
 
 # Environment variables
 .env
+
+# Next.js
+client2/.next/
+client2/out/
+
+# Production builds
+client2/build/
+dist/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Temporary folders
+tmp/
+temp/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
